--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -32,9 +32,15 @@ spring.datasource.initialization-mode=never
 spring.jmx.enabled=false
 
 #\u6570\u636E\u6E90\u914D\u7F6E
-datasource.url=jdbc:mysql://127.0.0.1:3306/sb_middleware?useUnicode=true&characterEncoding=UTF8&autoReconnect=true&zeroDateTimeBehavior=convertToNull
-datasource.username=root
-datasource.password=QWEasd_12345678
+datasource.one.url=jdbc:mysql://127.0.0.1:3306/sb_middleware?useUnicode=true&characterEncoding=UTF8&autoReconnect=true&zeroDateTimeBehavior=convertToNull
+datasource.one.username=root
+datasource.one.password=QWEasd_12345678
+
+#\u6570\u636E\u6E90\u914D\u7F6E
+datasource.two.url=jdbc:mysql://127.0.0.1:3306/sb_technology?useUnicode=true&characterEncoding=UTF8&autoReconnect=true&zeroDateTimeBehavior=convertToNull
+datasource.two.username=root
+datasource.two.password=QWEasd_12345678
+
 
 #mybatis
 mybatis.config-location=classpath:mybatis-config.xml
@@ -63,7 +69,7 @@ spring.mail.properties.mail.smtp.starttls.required=true
 mail.send.from=806516984@qq.com
 
 
-mail.send.attachment.root.url=E:\\srv\\middleware\\appendix
+mail.send.attachment.root.url=/media/lxl/Linux/test_workplace
 
 mail.send.attachment.one.name=\u56FE\u72471.jpg
 mail.send.attachment.one.location=${mail.send.attachment.root.url}\\img1.jpg
@@ -81,7 +87,7 @@ mail.template.file.location=mailTempOne.ftl
 
 
 #\u6587\u4EF6\u4E0A\u4F20\u914D\u7F6E
-file.upload.location.root.url=E:\\srv\\middleware\\appendix\\
+file.upload.location.root.url=/media/lxl/Linux/test_workplace
 
 
 
