--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -24,7 +24,7 @@ logging.level.org.springframework = INFO
 logging.level.com.fasterxml.jackson = INFO
 logging.level.com.debug.boot.middleware = DEBUG
 
-#json\u5E8F\u5217\u5316\u914D\u7F6E
+#json数据化的配置
 spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
 spring.jackson.time-zone=GMT+8
 
